# Multi-threaded_Mathproblem

./: .gitignore  README.md  mult.cc  single.cc
python/: CMakeLists.txt  HELP.md  main.cpp  main.py  mult.hh  single.py
